--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <style>
     body { margin:0; padding:0; }
+    .left-a { font-size:2rem; }
 </style>
-<div style="position:fixed; left:0; top:0; width:25vw; height:100vh;">
-    ...
+<div style="position:fixed; left:0; top:0; width:25vw; height:100vh; padding-left:150px;
+    padding-top:150px;">
+    <a class="left-a" target="nframe" href="">Table of Contents</a><br>
+    <img src="https://drive.google.com/uc?id=19JK0CPxpClFMKz1yIyPkXDjNVmVxmWR0"
+        style="width:calc(25vw - 2 * 150px);">
+    Wpower is a web-powered library and framework to make anything web. 
+    The project is maintained by 
+    <a target="_blank" href="//novaeh.com">Novaeh Team</a>.
 </div>
-<iframe src="https://frequent-cobra-a63.notion.site/ebd/1c2caf1bada68061a8a8e20637597450"
+<iframe name="nframe" src="https://frequent-cobra-a63.notion.site/ebd/1c2caf1bada68061a8a8e20637597450"
     style="position:fixed; left:25vw; top:0; width:75vw; height:100vh;
     overflow:auto;">
 </iframe>
