--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
     body { margin:0; padding:0; }
     .left-a { font-size:2rem; }
 </style>
-<div style="position:fixed; left:0; top:0; width:25vw; height:100vh; padding-left:150px;
-    padding-top:150px;">
-    <a class="left-a" target="nframe" href="">Table of Contents</a><br>
+<div style="position:fixed; left:0; top:0; width:25vw; height:100vh; padding-left:50px;
+    padding-top:150px; padding-right:50px;">
+    <a class="left-a" target="nframe" href="https://frequent-cobra-a63.notion.site/ebd/1c2caf1bada68061a8a8e20637597450"
+        >Table of Contents</a><br>
     <img src="https://drive.google.com/uc?id=19JK0CPxpClFMKz1yIyPkXDjNVmVxmWR0"
-        style="width:calc(25vw - 2 * 150px);">
+        style="width:calc(25vw - 100px);"><br>
     Wpower is a web-powered library and framework to make anything web. 
     The project is maintained by 
     <a target="_blank" href="//novaeh.com">Novaeh Team</a>.
