--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <style>
+    * { box-sizing:border-box; }
     body { margin:0; padding:0; }
     .left-a { font-size:2rem; }
 </style>
@@ -6,7 +7,7 @@
     padding-top:150px; padding-right:50px;">
     <a class="left-a" target="nframe" href="https://frequent-cobra-a63.notion.site/ebd/1c2caf1bada68061a8a8e20637597450"
         >Table of Contents</a><br>
-    <img src="https://drive.google.com/uc?id=19JK0CPxpClFMKz1yIyPkXDjNVmVxmWR0"
+    <img src="https://drive.google.com/thumbnail?id=19JK0CPxpClFMKz1yIyPkXDjNVmVxmWR0"
         style="width:calc(25vw - 100px);"><br>
     Wpower is a web-powered library and framework to make anything web. 
     The project is maintained by 
