--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         style="width:calc(25vw - 100px);"><br>
     Wpower is a web-powered library and framework to make anything web. 
     The project is maintained by 
-    <a target="_blank" href="//novaeh.com">Novaeh Team</a>.
+    <a target="_blank" href="http://novaeh.com">Novaeh Team</a>.
 </div>
 <iframe name="nframe" src="https://frequent-cobra-a63.notion.site/ebd/1c2caf1bada68061a8a8e20637597450"
     style="position:fixed; left:25vw; top:0; width:75vw; height:100vh;
